--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-
-
-
 fastapi
-uvicorn[standard]
+uvicorn
+pydantic
 pandas
 scikit-learn
-sentence-transformers==2.2.2
-torch==1.12.1+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
+sentence-transformers
+gunicorn
+
+
