--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn
+fastapi==0.68.0
+uvicorn==0.15.0
 pydantic
 pandas
 scikit-learn
-sentence-transformers
-gunicorn
+sentence-transformers==2.2.2
+gunicorn==20.1.0
 
 
