--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-fastapi==0.68.0
-uvicorn==0.15.0
+fastapi
+uvicorn
 pydantic
 pandas
 scikit-learn
-sentencepiece==0.1.99 --no-build-isolation
-sentence-transformers==2.2.2
-gunicorn==20.1.0
+sentence-transformers
+gunicorn
 
 
