--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -31,3 +31,10 @@ jobs:
         app-name: 'fastapiendpoint'  # Replace with your app name
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: . 
+
+    - name: Set application settings
+      run: |
+        az webapp config appsettings set --name 'fastapiendpoint' --resource-group 'your-resource-group' --settings PYTHON_VERSION=3.9 WEBSITE_RUN_FROM_PACKAGE=1 SCM_DO_BUILD_DURING_DEPLOYMENT=true
+    
+    - name: Wait for 30 seconds
+      run: sleep 30 
