--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,8 @@ sentence-transformers==2.2.2
 gunicorn==21.2.0
 fuzzywuzzy==0.18.0
 python-Levenshtein==0.21.1
+numpy==1.24.3
+scipy==1.10.1
+Cython==0.29.36
 
 
