--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.4.2
-pandas==2.0.3
-scikit-learn==1.3.2
-sentence-transformers==2.2.2
-gunicorn==21.2.0
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
-numpy==1.24.3
-scipy==1.10.1
-Cython==0.29.36
 
-
+uvicorn
+pydantic
+pandas
+scikit-learn
+sentence-transformers
+fuzzywuzzy
+gunicorn
