--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-
-uvicorn
-pydantic
-pandas
-scikit-learn
-sentence-transformers
-fuzzywuzzy
-gunicorn
+fastapi==0.95.2
+uvicorn==0.22.0
+pydantic==1.10.7
+pandas==1.5.3
+numpy==1.24.3
+sentence-transformers==2.2.2
+scikit-learn==1.2.2
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.21.1
+xlrd==2.0.1
+gunicorn==20.1.0
+torch==2.0.1
+transformers==4.30.2
