--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-pydantic==1.10.7
-pandas==1.5.3
-numpy==1.24.3
-sentence-transformers==2.2.2
-scikit-learn==1.2.2
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
-xlrd==2.0.1
-gunicorn==20.1.0
-torch==2.0.1
-transformers==4.30.2
+setuptools>=68.0.0
+wheel>=0.41.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
+pydantic>=2.6.0
+pandas>=2.2.0
+numpy>=1.26.0
+sentence-transformers>=2.5.0
+scikit-learn>=1.4.0
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.23.0
+xlrd>=2.0.1
+gunicorn>=21.2.0
+torch>=2.2.0
+transformers>=4.37.0
